--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -633,6 +633,12 @@ config WIFI_SAR
 	  Provides a interface to control wifi max TX power and notifies other
 	  kernel components when SAR cutback has to be applied.
 
+config FORCE_FAST_CHARGE
+	bool "Force faster charge rate for USB"
+	default n
+	help
+	  This allows users to override default charge rate for USB
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
