--- a/drivers/soc/qcom/Makefile
+++ b/drivers/soc/qcom/Makefile
@@ -88,3 +88,5 @@ obj-$(CONFIG_MSM_RTB) += msm_rtb-hotplug.o
 obj-$(CONFIG_QCOM_EARLY_RANDOM)	+= early_random.o
 obj-$(CONFIG_MSM_PACMAN)        += msm_pacman.o
 obj-$(CONFIG_STATE_NOTIFIER)		+= state_notifier.o
+
+obj-$(CONFIG_PDESIREAUDIO_HELPER) += pdesireaudio_helper.o
