scripts: setlocalversion: remove plus symbol
Adapted from @nathanchance commits
Thanks to @MSF-Jarvis aka Harsh for pointing me out

Signed-off-by: Robby Duran <storm119@gmail.com>

--- a/arch/arm64/configs/superuber_defconfig
+++ b/arch/arm64/configs/superuber_defconfig
@@ -41,8 +41,8 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_ZEN_INTERACTIVE=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=""
-#CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_LOCALVERSION="-SuperUbeR"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
