defconfig: Enable High performance audio
Signed-off-by: Robby Duran <storm119@gmail.com>

--- a/arch/arm64/configs/superuber_defconfig
+++ b/arch/arm64/configs/superuber_defconfig
@@ -52,6 +52,7 @@ CONFIG_AUDIT=y
 # CONFIG_AUDIT_LOGINUID_IMMUTABLE is not set
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_WAKE_GESTURES=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 
 #
 # IRQ subsystem
