--- a/arch/arm64/configs/superuber_defconfig
+++ b/arch/arm64/configs/superuber_defconfig
@@ -455,6 +455,7 @@ CONFIG_CPU_FREQ_GOV_DESPAIR=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_BOOST=y
+CONFIG_FINGERPRINT_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
 #
@@ -469,8 +470,8 @@ CONFIG_CPU_FREQ_MSM=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
 # CONFIG_CPU_IDLE_GOV_LADDER is not set
-# CONFIG_CPU_IDLE_GOV_MENU is not set
-CONFIG_CPU_IDLE_GOV_NULL=y
+CONFIG_CPU_IDLE_GOV_MENU=y
+# CONFIG_CPU_IDLE_GOV_NULL is not set
 # CONFIG_ARCH_NEEDS_CPU_IDLE_COUPLED is not set
 
 #
@@ -3274,6 +3275,7 @@ CONFIG_DEVFREQ_GOV_CPUFREQ=y
 CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
 CONFIG_MSM_BIMC_BWMON=y
 CONFIG_DEVFREQ_GOV_MSM_GPUBW_MON=y
+CONFIG_ADRENO_IDLER=y
 CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 # CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON is not set
 CONFIG_DEVFREQ_GOV_SPDM_HYP=y
