makefile: major overhaul (cleaning/optimise) - gen opt variable with flags for armv8 big.little - switched 03 to -Ofast optimisation - test new flags optimisation - cleaning stuffs etc
Signed-off-by: Robby Duran <storm119@gmail.com>

--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -19,9 +19,24 @@ LIBGCC 		:= $(shell $(CC) $(KBUILD_CFLAGS) -print-libgcc-file-name)
 
 KBUILD_DEFCONFIG := defconfig
 
+ARM_ARCH_OPT := -mcpu=cortex-a57.cortex-a53+crypto+crc -mtune=cortex-a57.cortex-a53
+GEN_OPT_FLAGS := $(call cc-option,$(ARM_ARCH_OPT),-march=armv8-a) \
+ -g0 \
+ -DNDEBUG \
+ -fgraphite \
+ -fgraphite-identity \
+ -fomit-frame-pointer \
+ -fmodulo-sched-allow-regmoves \
+ -fivopts \
+ -floop-block \
+ -floop-interchange \
+ -floop-strip-mine \
+ -ftree-loop-distribution \
+ -ftree-loop-linear
+
 KBUILD_CFLAGS	+= -mgeneral-regs-only
 KBUILD_CFLAGS	+= -fno-pic
-KBUILD_CFLAGS	+= -fno-asynchronous-unwind-tables
+KBUILD_CFLAGS	+= $(GEN_OPT_FLAGS)
 ifeq ($(CONFIG_CPU_BIG_ENDIAN), y)
 KBUILD_CPPFLAGS	+= -mbig-endian
 AS		+= -EB
