--- a/arch/arm64/configs/superuber_defconfig
+++ b/arch/arm64/configs/superuber_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_ZEN_INTERACTIVE=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-SuperUbeR-O-R2.26"
+CONFIG_LOCALVERSION="-SuperUbeR-O-R2.27"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -140,7 +140,7 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
-CONFIG_CC_OPTIMIZE_ALOT=y
+# CONFIG_CC_OPTIMIZE_ALOT is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_HAVE_UID16=y
