makefile: Clean and organise
Signed-off-by: Robby Duran <storm119@gmail.com>

--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -15,24 +15,18 @@ CPPFLAGS_vmlinux.lds = -DTEXT_OFFSET=$(TEXT_OFFSET)
 OBJCOPYFLAGS	:=-O binary -R .note -R .note.gnu.build-id -R .comment -S
 GZFLAGS		:=-9
 
-LIBGCC 		:= $(shell $(CC) $(KBUILD_CFLAGS) -print-libgcc-file-name)
-
 KBUILD_DEFCONFIG := defconfig
 
-ARM_ARCH_OPT := -mcpu=cortex-a57.cortex-a53+crc+crypto -mtune=cortex-a57.cortex-a53
-GEN_OPT_FLAGS := $(call cc-option,$(ARM_ARCH_OPT),-march=armv8-a+crc+crypto) \
- -O3 \
- -DNDEBUG -g0 \
- -ffast-math \
- -fsched-spec-load \
- -fforce-addr \
- -fsingle-precision-constant \
- -fivopts \
- -ftree-vectorize
+# Optimize for big.LITTLE configuration
+ARM_ARCH_OPT 	:= -mcpu=cortex-a57.cortex-a53+crc+crypto -mtune=cortex-a57.cortex-a53
+				
+# fall back to march can break assembly....
+GEN_OPT_FLAGS 	= $(call cc-option,$(ARM_ARCH_OPT),-march=armv8-a+crc+crypto)
+
+KBUILD_CFLAGS	+= $(ARM_ARCH_OPT)
 
 KBUILD_CFLAGS	+= -mgeneral-regs-only
 KBUILD_CFLAGS	+= -fno-pic
-KBUILD_CFLAGS	+= $(GEN_OPT_FLAGS)
 ifeq ($(CONFIG_CPU_BIG_ENDIAN), y)
 KBUILD_CPPFLAGS	+= -mbig-endian
 AS		+= -EB
@@ -60,7 +54,6 @@ core-$(CONFIG_XEN)		+= arch/arm64/xen/
 core-$(CONFIG_KVM) += arch/arm64/kvm/
 core-$(CONFIG_CRYPTO) += arch/arm64/crypto/
 libs-y		:= arch/arm64/lib/ $(libs-y)
-libs-y		+= $(LIBGCC)
 
 # Default target when executing plain make
 ifeq ($(CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE),y)
