--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -645,6 +645,7 @@ config KERNEL_TEXT_MPU_PROT
 
 config STATE_NOTIFIER
         bool "State Notifier"
+        default y
 
 source "drivers/soc/qcom/memshare/Kconfig"
 
