--- a/arch/arm64/configs/superuber_defconfig
+++ b/arch/arm64/configs/superuber_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_ZEN_INTERACTIVE=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-SuperUbeR-U-R2.35"
+CONFIG_LOCALVERSION="-SuperUbeR-U-R2.36"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -441,31 +441,34 @@ CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
-# CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_TRIPNDROID is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ELEMENTALX is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARD is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ELECTRON is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESS is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_TRIPNDROID is not set
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_DESPAIR=y
-CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
-CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARD is not set
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
-CONFIG_CPU_FREQ_GOV_ALUCARD=y
-CONFIG_CPU_FREQ_GOV_DARKNESS=y
-CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_TRIPNDROID=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+CONFIG_CPU_FREQ_GOV_ELECTRON=y
+CONFIG_CPU_FREQ_GOV_DESPAIR=y
+CONFIG_CPU_FREQ_GOV_DARKNESS=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+CONFIG_CPU_FREQ_GOV_ALUCARD=y
 CONFIG_CPU_BOOST=y
 CONFIG_FINGERPRINT_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
@@ -3485,6 +3488,7 @@ CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_QCOM_NPA_DUMP=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
+CONFIG_STATE_NOTIFIER=y
 # CONFIG_MEM_SHARE_QMI_SERVICE is not set
 
 #
