--- a/arch/arm64/configs/superuber_defconfig
+++ b/arch/arm64/configs/superuber_defconfig
@@ -425,6 +425,7 @@ CONFIG_QUICK_WAKEUP=y
 # CONFIG_DEDUCE_WAKEUP_REASONS is not set
 # CONFIG_PARTIALRESUME is not set
 CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_QUICK_THAW_FINGERPRINTD=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
 
@@ -469,8 +470,9 @@ CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
-CONFIG_CPU_BOOST=y
-CONFIG_FINGERPRINT_BOOST=y
+# CONFIG_CPU_BOOST is not set
+# CONFIG_FINGERPRINT_BOOST is not set
+CONFIG_CPU_INPUT_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
 #
@@ -2578,6 +2580,7 @@ CONFIG_HID_SENSOR_HUB=y
 CONFIG_USB_HID=y
 # CONFIG_HID_PID is not set
 # CONFIG_USB_HIDDEV is not set
+CONFIG_HID_FIIO=y
 
 #
 # I2C HID support
@@ -3484,8 +3487,9 @@ CONFIG_MSM_SHARED_HEAP_ACCESS=y
 CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
 # CONFIG_MSM_PACMAN is not set
-# CONFIG_MSM_CORE_CTL_HELPER is not set
-CONFIG_MSM_PERFORMANCE=y
+CONFIG_MSM_CORE_CTL_HELPER=y
+CONFIG_MSM_CORE_CTL=y
+# CONFIG_MSM_PERFORMANCE is not set
 CONFIG_QCOM_NPA_DUMP=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
 CONFIG_STATE_NOTIFIER=y
