--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -162,6 +162,11 @@ config CPU_FREQ_DEFAULT_GOV_ALUCARD
 	  performance. It has been known to be battery friendly without sacrificing much performance. If unsure have a look
 	  at the help section of the driver. Fallback governor will be the performance governor.
 
+config CPU_FREQ_DEFAULT_GOV_GABRIELPLUS
+	bool "gabrielplus"
+	select CPU_FREQ_GOV_GABRIELPLUS
+	help
+
 config CPU_FREQ_DEFAULT_GOV_DARKNESS
 	bool "darkness"
 	select CPU_FREQ_GOV_DARKNESS
@@ -315,6 +320,12 @@ config CPU_FREQ_GOV_TRIPNDROID
 	  Custom cpu governor designed specificly for multi cpu mobile devices.
 	  Aiming at a balance between performance and battery lifetime, but it
 	  hangs a little bit more towards performance at low latencys.
+
+config CPU_FREQ_GOV_GABRIELPLUS
+	tristate "'gabrielplus' cpufreq governor"
+	depends on CPU_FREQ
+	select CPU_FREQ_GOV_COMMON
+	default y
 
 config CPU_FREQ_GOV_CONSERVATIVE
 	tristate "'conservative' cpufreq governor"
