--- a/arch/arm64/configs/superuber_defconfig
+++ b/arch/arm64/configs/superuber_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_ZEN_INTERACTIVE=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-SuperUbeR-U-R2.41"
+CONFIG_LOCALVERSION="-SuperUbeR-U-R2.41-SE"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -470,9 +470,9 @@ CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
-# CONFIG_CPU_BOOST is not set
-# CONFIG_FINGERPRINT_BOOST is not set
-CONFIG_CPU_INPUT_BOOST=y
+CONFIG_CPU_BOOST=y
+CONFIG_FINGERPRINT_BOOST=y
+# CONFIG_CPU_INPUT_BOOST is not set
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
 #
@@ -3188,7 +3188,7 @@ CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 # CONFIG_ANDROID_BINDER_IPC_32BIT is not set
-CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder"
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ASHMEM=y
 # CONFIG_ANDROID_LOGGER is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
@@ -3488,9 +3488,9 @@ CONFIG_MSM_SHARED_HEAP_ACCESS=y
 CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
 # CONFIG_MSM_PACMAN is not set
-CONFIG_MSM_CORE_CTL_HELPER=y
-CONFIG_MSM_CORE_CTL=y
-# CONFIG_MSM_PERFORMANCE is not set
+# CONFIG_MSM_CORE_CTL_HELPER is not set
+# CONFIG_MSM_CORE_CTL is not set
+CONFIG_MSM_PERFORMANCE=y
 CONFIG_QCOM_NPA_DUMP=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
 CONFIG_STATE_NOTIFIER=y
