--- a/arch/arm64/configs/superuber_defconfig
+++ b/arch/arm64/configs/superuber_defconfig
@@ -265,6 +265,7 @@ CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_SIOPLUS=y
 CONFIG_IOSCHED_TRIPNDROID=y
+CONFIG_IOSCHED_SWITCHER=y
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
@@ -414,6 +415,7 @@ CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_PM_WAKELOCKS_GC=y
+CONFIG_PM_WAKELOCKS_SENSOR_IND_HACK=y
 CONFIG_PM_RUNTIME=y
 CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
@@ -463,6 +465,8 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_GABRIELPLUS=y
+CONFIG_CPU_FREQ_GOV_GABRIEL=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 CONFIG_CPU_FREQ_GOV_ELECTRON=y
 CONFIG_CPU_FREQ_GOV_DESPAIR=y
@@ -470,9 +474,9 @@ CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
-CONFIG_CPU_BOOST=y
-CONFIG_FINGERPRINT_BOOST=y
-# CONFIG_CPU_INPUT_BOOST is not set
+# CONFIG_CPU_BOOST is not set
+# CONFIG_FINGERPRINT_BOOST is not set
+CONFIG_CPU_INPUT_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
 #
@@ -497,6 +501,8 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 # CONFIG_KUSER_HELPERS_SELECTIVE_DISABLE is not set
 CONFIG_NET=y
 CONFIG_COMPAT_NETLINK_MESSAGES=y
+CONFIG_CPU_SPECTRE=y
+# CONFIG_HARDEN_BRANCH_PREDICTOR is not set
 
 #
 # Networking options
@@ -1179,7 +1185,9 @@ CONFIG_SCSI_MULTI_LUN=y
 CONFIG_HAVE_PATA_PLATFORM=y
 # CONFIG_ATA is not set
 CONFIG_MD=y
-# CONFIG_BLK_DEV_MD is not set
+CONFIG_BLK_DEV_MD=y
+CONFIG_MD_AUTODETECT=y
+CONFIG_MD_LINEAR=y
 # CONFIG_BCACHE is not set
 CONFIG_BLK_DEV_DM_BUILTIN=y
 CONFIG_BLK_DEV_DM=y
@@ -1200,6 +1208,8 @@ CONFIG_DM_REQ_CRYPT=y
 CONFIG_DM_VERITY=y
 CONFIG_DM_VERITY_FEC=y
 CONFIG_DM_ANDROID_VERITY=y
+CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE_128=y
+CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE=128
 # CONFIG_TARGET_CORE is not set
 # CONFIG_FUSION is not set
 
@@ -1844,6 +1854,7 @@ CONFIG_GPIO_QPNP_PIN=y
 #
 # CONFIG_W1 is not set
 CONFIG_POWER_SUPPLY=y
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
 # CONFIG_PDA_POWER is not set
 # CONFIG_GENERIC_ADC_BATTERY is not set
@@ -1879,6 +1890,8 @@ CONFIG_BATTERY_BCL=y
 # CONFIG_QPNP_VM_BMS is not set
 # CONFIG_QPNP_BMS is not set
 # CONFIG_QPNP_LINEAR_CHARGER is not set
+CONFIG_QNS_SYSTEM=y
+CONFIG_MSM_BCL_SOMC_CTL=y
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
 CONFIG_POWER_RESET=y
@@ -2022,6 +2035,7 @@ CONFIG_THERMAL_GOV_STEP_WISE=y
 CONFIG_THERMAL_TSENS8974=y
 CONFIG_LIMITS_MONITOR=y
 CONFIG_LIMITS_LITE_HW=y
+# CONFIG_INTELLI_THERMAL is not set
 CONFIG_THERMAL_MONITOR=y
 # CONFIG_SUPPLY_LM_MONITOR is not set
 CONFIG_THERMAL_QPNP=y
@@ -3488,9 +3502,9 @@ CONFIG_MSM_SHARED_HEAP_ACCESS=y
 CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
 # CONFIG_MSM_PACMAN is not set
-# CONFIG_MSM_CORE_CTL_HELPER is not set
-# CONFIG_MSM_CORE_CTL is not set
-CONFIG_MSM_PERFORMANCE=y
+CONFIG_MSM_CORE_CTL_HELPER=y
+CONFIG_MSM_CORE_CTL=y
+# CONFIG_MSM_PERFORMANCE is not set
 CONFIG_QCOM_NPA_DUMP=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
 CONFIG_STATE_NOTIFIER=y
@@ -3664,6 +3678,8 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_MAC_ROMANIAN is not set
 # CONFIG_NLS_MAC_TURKISH is not set
 CONFIG_NLS_UTF8=y
+CONFIG_LCD_NOTIFIER=y
+CONFIG_DYNAMIC_FSYNC=y
 # CONFIG_DLM is not set
 # CONFIG_VIRTUALIZATION is not set
 
