--- a/drivers/cpufreq/Makefile
+++ b/drivers/cpufreq/Makefile
@@ -27,6 +27,8 @@ obj-$(CONFIG_FINGERPRINT_BOOST)		+= fp-boost.o
 # CPU Input Boost
 obj-$(CONFIG_CPU_INPUT_BOOST)		+= cpu_input_boost.o
 
+obj-$(CONFIG_GENERIC_CPUFREQ_CPU0)	+= cpufreq-cpu0.o
+
 ##################################################################################
 # x86 drivers.
 # Link order matters. K8 is preferred to ACPI because of firmware bugs in early
