--- a/arch/arm64/configs/superuber_defconfig
+++ b/arch/arm64/configs/superuber_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_ZEN_INTERACTIVE=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-SuperUbeR-U-R2.41-SE"
+CONFIG_LOCALVERSION="-SuperUbeR-U-R2.43"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -84,7 +84,10 @@ CONFIG_HIGH_RES_TIMERS=y
 # CONFIG_TICK_CPU_ACCOUNTING is not set
 CONFIG_IRQ_TIME_ACCOUNTING=y
 # CONFIG_BSD_PROCESS_ACCT is not set
-# CONFIG_TASKSTATS is not set
+CONFIG_TASKSTATS=y
+CONFIG_TASK_DELAY_ACCT=y
+CONFIG_TASK_XACCT=y
+CONFIG_TASK_IO_ACCOUNTING=y
 
 #
 # RCU Subsystem
