--- a/arch/arm64/configs/superuber_defconfig
+++ b/arch/arm64/configs/superuber_defconfig
@@ -480,6 +480,12 @@ CONFIG_CPU_FREQ_GOV_ALUCARD=y
 # CONFIG_CPU_BOOST is not set
 # CONFIG_FINGERPRINT_BOOST is not set
 CONFIG_CPU_INPUT_BOOST=y
+CONFIG_INPUT_BOOST_DURATION_MS=100
+CONFIG_WAKE_BOOST_DURATION_MS=1000
+CONFIG_INPUT_BOOST_FREQ_LP=960000
+CONFIG_INPUT_BOOST_FREQ_PERF=384000
+CONFIG_REMOVE_INPUT_BOOST_FREQ_LP=384000
+CONFIG_REMOVE_INPUT_BOOST_FREQ_PERF=384000
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
 #
